FOF 3.1.2
================================================================================
+ You can now pass a custom state hash to the Model's constructor and/or set it with the setHash() method
~ Fix the handling of chained IPs in X-Forwarded-For

FOF 3.1.1
================================================================================
+ Controller mixins
+ Model mixins
+ @plural() Blade statement to support JText::plural()
+ @jlayout() Blade statement to load and render JLayout view templates
+ ViewTemplate field passes $rowid to the view template
+ Published field takes into account ACL
+ Installation script classes for modules and plugins
~ Working around Joomla's bug about forgotten files on update

FOF 3.1.0
================================================================================
! Joomla! 3.7 has a broken System - Page Cache plugin which leads to white pages
+ Abstraction of session get/set variables in the Platform
+ You can add external CSS and JS files through the View and Template packages

Backwards compatibility and migration notes:

* PHP 5.3 no longer supported. The minimum supported version of PHP is now 5.4.0. Some features may require PHP 5.5+.
* If you use a custom Platform class which doesn't extend FOF30\Platform\Joomla\Platform you will need to implement the
  new methods from the PlatformInterface. This is a potential b/c break. We're willing to take the bet and not call this
  FOF 4.0 since we've not yet heard of anyone using their custom platform. This is not exactly SemVer but hey, it's not
  like Joomla! itself offers SemVer...
* Template::route will now only merge parameters if you either pass a second boolean argument OR if your URL does not
  have either option or one of view, task query string parameters in it. Check your code in case you do something like
  $container->template->route('index.php?option=com_foobar&task=baz') as this bad practice is no longer going to work.