@@ -95,14 +95,18 @@ class Model
 			$this->name = $config['name'];
 		}
 
+		// If $config['name'] is not set, auto-detect the model's name
+		$this->name = $this->getName();
+
 		// Do we have a configured state hash? Since 3.1.2.
 		if (isset($config['hash']) && !empty($config['hash']))
 		{
 			$this->setHash($config['hash']);
 		}
-
-		// If $config['name'] is not set, auto-detect the model's name
-		$this->name = $this->getName();
+		elseif (isset($config['hash_view']) && !empty($config['hash_view']))
+		{
+			$this->getHash($config['hash_view']);
+		}
 
 		// Set the model state
 		if (array_key_exists('state', $config))
@@ -219,16 +223,29 @@ class Model
 	}
 
 	/**
-	 * Returns a unique hash for each view, used to prefix the state variables
-	 * to allow us to retrieve them from the state later on.
+	 * Returns a unique hash for each view, used to prefix the state variables to allow us to retrieve them from the
+	 * state later on. If it's not already set (with setHash) it will be set in the form com_something.myModel. If you
+	 * pass a non-empty $viewName then if it's not already set it will be instead set in the form of
+	 * com_something.viewName.myModel  which is useful when you are reusing models in multiple views and want to avoid
+	 * state bleedover among views.
+	 *
+	 * Also see the hash and hash_view parameters in the constructor's options.
 	 *
 	 * @return  string
 	 */
-	public function getHash()
+	public function getHash($viewName = null)
 	{
 		if (is_null($this->stateHash))
 		{
-			$this->stateHash = ucfirst($this->container->componentName) . '.' . $this->getName() . '.';
+			$this->stateHash = ucfirst($this->container->componentName) . '.';
+
+			if (!empty($viewName))
+			{
+				$this->stateHash .= $viewName . '.';
+			}
+
+			$this->stateHash .= $this->getName() . '.';
+
 		}
 
 		return $this->stateHash;
